--- a/Zbang.Cloudents.MobileApp/packages.config
+++ b/Zbang.Cloudents.MobileApp/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.2.1" targetFramework="net451" />
+  <package id="Autofac" version="4.4.0" targetFramework="net462" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net451" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net451" />
-  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
@@ -23,27 +23,29 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.Azure.Mobile.Server" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.Authentication" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.CrossDomain" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.Entity" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.Home" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.Login" version="0.3.157.1" targetFramework="net45" />
-  <package id="Microsoft.Azure.Mobile.Server.Notifications" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.Quickstart" version="1.1.157.1" targetFramework="net451" />
-  <package id="Microsoft.Azure.Mobile.Server.Tables" version="1.1.157.1" targetFramework="net451" />
+  <package id="Microsoft.Azure.Mobile.Server" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Authentication" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.CrossDomain" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Entity" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Home" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Login" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Notifications" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Quickstart" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.Mobile.Server.Tables" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Azure.NotificationHubs" version="1.0.7" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net451" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net462" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.205111437" targetFramework="net45" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net451" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
   <package id="WindowsAzure.ServiceBus" version="2.3.4.0" targetFramework="net451" />
 </packages>
