--- a/Zbang.Cloudents.Mvc4WebRole/packages.config
+++ b/Zbang.Cloudents.Mvc4WebRole/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AjaxMin" version="4.97.4951.28483" targetFramework="net45" />
+  <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net462" />
   <package id="Angular.Material" version="1.1.1" targetFramework="net451" />
   <package id="Angular.UI.UI-Router" version="0.3.1" targetFramework="net451" />
   <package id="angular-applicationinsights" version="0.2.8" targetFramework="net451" />
@@ -16,11 +16,12 @@
   <package id="angular-material.TypeScript.DefinitelyTyped" version="1.6.4" targetFramework="net451" />
   <package id="angular-signalr-hub.TypeScript.DefinitelyTyped" version="0.7.4" targetFramework="net451" />
   <package id="angular-ui-router.TypeScript.DefinitelyTyped" version="1.5.4" targetFramework="net451" />
-  <package id="Autofac" version="4.2.1" targetFramework="net451" />
-  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net451" />
-  <package id="Autofac.Mvc5.Owin" version="4.0.0" targetFramework="net451" />
+  <package id="Autofac" version="4.4.0" targetFramework="net462" />
+  <package id="Autofac.Mvc5" version="4.0.1" targetFramework="net462" />
+  <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net462" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="cachefactory.TypeScript.DefinitelyTyped" version="0.0.8" targetFramework="net451" />
+  <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net451" />
   <package id="jQuery" version="2.2.4" targetFramework="net451" />
@@ -45,9 +46,9 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net451" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net462" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
@@ -55,7 +56,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Administration" version="7.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.Web.RedisOutputCacheProvider" version="1.7.2" targetFramework="net451" />
+  <package id="Microsoft.Web.RedisOutputCacheProvider" version="1.7.3" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
   <package id="modernizr.TypeScript.DefinitelyTyped" version="0.3.1" targetFramework="net451" />
   <package id="MvcDonutCaching" version="1.3.0" targetFramework="net45" />
@@ -63,10 +64,12 @@
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="plupload.TypeScript.DefinitelyTyped" version="0.0.1" targetFramework="net451" />
   <package id="signalr.TypeScript.DefinitelyTyped" version="0.4.1" targetFramework="net451" />
-  <package id="SquishIt" version="0.9.8.2" targetFramework="net451" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net451" />
+  <package id="SquishIt" version="0.9.9" targetFramework="net462" />
+  <package id="StackExchange.Redis.StrongName" version="1.1.608" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.1.0" targetFramework="net462" />
   <package id="windowsazure.mediaservices" version="3.0.0.7" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="8.0.0" targetFramework="net451" />
-  <package id="YUICompressor.NET" version="2.0.0.0" targetFramework="net45" />
+  <package id="YUICompressor.NET" version="2.3.0.0" targetFramework="net462" />
 </packages>
