Added add post to feed

--- a/Zbang.Cloudents.Jared/Web.config
+++ b/Zbang.Cloudents.Jared/Web.config
@@ -22,6 +22,8 @@
     <!-- When using this setting, be sure to add matching Notification Hubs connection
     string in the connectionStrings section with the name "MS_NotificationHubConnectionString". -->
     <add key="MS_NotificationHubName" value="Overridden by portal settings" />
+
+    <add key="CacheUse" value="true" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
