--- a/Zbang.Cloudents.Mvc2Jared/packages.config
+++ b/Zbang.Cloudents.Mvc2Jared/packages.config
@@ -8,7 +8,7 @@
   <package id="angularjs.TypeScript.DefinitelyTyped" version="6.5.6" targetFramework="net462" />
   <package id="angular-ui-router.TypeScript.DefinitelyTyped" version="1.5.4" targetFramework="net462" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net462" />
+  <package id="bootstrap" version="4.0.0-alpha6" targetFramework="net462" />
   <package id="jQuery" version="3.1.1" targetFramework="net462" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net462" />
