Temp stuff to do a branch change

--- a/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
+++ b/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
@@ -157,7 +157,7 @@
     <Compile Include="Queries\Emails\GetUserByNotificationQuery.cs" />
     <Compile Include="Queries\Emails\MarketingQuery.cs" />
     <Compile Include="Queries\GetBoxQuizesPagedQuery.cs" />
-    <Compile Include="Queries\GetBoxSeoQuery.cs" />
+    <Compile Include="Queries\GetBoxIdQuery.cs" />
     <Compile Include="Queries\GetBoxSideBarQuery.cs" />
     <Compile Include="Queries\GetChatRoomMessagesQuery.cs" />
     <Compile Include="Queries\GetHomeBoxesUniversityQuery.cs" />
