fix ioc config send data to the controleer

--- a/Zbang.Cloudents.Mvc2Jared/Web.config
+++ b/Zbang.Cloudents.Mvc2Jared/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:appStartup" value="Zbang.Cloudents.Mvc2Jared.Startup, Zbang.Cloudents.Mvc2Jared" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
@@ -17,6 +19,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <connectionStrings>
+   <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
