--- a/Zbang.Cloudents.Mvc2Jared/packages.config
+++ b/Zbang.Cloudents.Mvc2Jared/packages.config
@@ -34,6 +34,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net462" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
