--- a/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
+++ b/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Dto\ItemDtos\ItemNavigationDto.cs" />
     <Compile Include="Dto\ItemRateDto.cs" />
     <Compile Include="Dto\JaredDto.cs" />
+    <Compile Include="Dto\JaredDtos\ItemTagsDto.cs" />
     <Compile Include="Dto\LeaderBoardDto.cs" />
     <Compile Include="Dto\Library\ClosedNodeDto.cs" />
     <Compile Include="Dto\Library\NodeDetails.cs" />
@@ -178,6 +179,7 @@
     <Compile Include="Queries\IPagedQuery.cs" />
     <Compile Include="Queries\ItemCommentQuery.cs" />
     <Compile Include="Queries\IUserQuery.cs" />
+    <Compile Include="Queries\Jared\JaredSearchQuery.cs" />
     <Compile Include="Queries\Library\GetClosedNodeMembersQuery.cs" />
     <Compile Include="Queries\Library\GetLibraryNodeQuery.cs" />
     <Compile Include="Queries\QnA\GetBoxQuestionsQuery.cs" />
