--- a/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
+++ b/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
@@ -176,6 +176,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="images1\combined-shape%403x.png" />
     <Content Include="Js\app.js" />
     <Content Include="Js\login.js" />
     <Content Include="Scripts\angular-animate\angular-animate.js" />
