Some stuff i did

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ UpgradeLog*.XML
 Zbang.Cloudents.MobileApp2/Properties/PublishProfiles/mobile-cloudents.pubxml
 
 .vs/config/applicationhost.config
+.vs/config/applicationhost.config
