--- a/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
+++ b/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
@@ -198,6 +198,9 @@
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="images1\combined-shape%403x.png" />
+    <Content Include="images1\combined-shape.png" />
+    <Content Include="images1\triangle-2%403x.png" />
+    <Content Include="images1\triangle-2.png" />
     <Content Include="Js\app.js" />
     <Content Include="Js\login.js" />
     <Content Include="Scripts\angular-animate\angular-animate.js" />
