--- a/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
+++ b/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
@@ -970,7 +970,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Extensions\JsonNetResult.cs" />
     <Compile Include="Global.asax.cs">
@@ -1055,7 +1055,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="Js\ajaxService.ts" />
     <TypeScriptCompile Include="Js\app.controller.ts" />
     <TypeScriptCompile Include="Js\app.service.ts" />
     <TypeScriptCompile Include="Js\main.ts" />
