--- a/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
+++ b/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
@@ -204,6 +204,7 @@
     <Content Include="images1\341083.jpg" />
     <Content Include="images1\combined-shape%403x.png" />
     <Content Include="images1\combined-shape.png" />
+    <Content Include="images1\shape%402x.png" />
     <Content Include="images1\shape%403x.png" />
     <Content Include="images1\shape.png" />
     <Content Include="images1\triangle-2%403x.png" />
