complete the queries for write and read tag items

--- a/Zbang.Cloudents.Mvc2Jared/Web.config
+++ b/Zbang.Cloudents.Mvc2Jared/Web.config
@@ -20,7 +20,7 @@
     </httpModules>
   </system.web>
   <connectionStrings>
-   <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+   <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZboxNew_2017-03-19T07-36Z;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
