--- a/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
+++ b/Zbang.Zbox.Domain.Commands/Zbang.Zbox.Domain.Commands.csproj
@@ -130,8 +130,10 @@
     <Compile Include="Quiz\UpdateQuizCommand.cs" />
     <Compile Include="RateItemCommand.cs" />
     <Compile Include="RemoveOldConnectionCommand.cs" />
+    <Compile Include="RemoveTagsFromItemCommand.cs" />
     <Compile Include="RequestAccessLibraryNodeCommand.cs" />
     <Compile Include="SaveUserFlashcardCommand.cs" />
+    <Compile Include="SetReviewedCommand.cs" />
     <Compile Include="UnsubscribeUsersFromEmailCommand.cs" />
     <Compile Include="UpdateBadgesCommand.cs" />
     <Compile Include="UpdateFlashcardCommand.cs" />
