improve the query

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@ Zbang.Cloudents.MobileApp2/Properties/PublishProfiles/mobile-cloudents.pubxml
 
 .vs/config/applicationhost.config
 .vs/config/applicationhost.config
+.vs/config/applicationhost.config
