--- a/Zbang.Cloudents.Jared/Web.config
+++ b/Zbang.Cloudents.Jared/Web.config
@@ -22,7 +22,7 @@
     <!-- When using this setting, be sure to add matching Notification Hubs connection
     string in the connectionStrings section with the name "MS_NotificationHubConnectionString". -->
     <add key="MS_NotificationHubName" value="Overridden by portal settings" />
-
+    <add key="documentDbProduction" value="true" />
     <add key="CacheUse" value="true" />
   </appSettings>
   <!--
